--- a/publication/a-kinetic-chain-growth/cite.bib
+++ b/publication/a-kinetic-chain-growth/cite.bib
@@ -1,6 +1,6 @@
 @article{
   title = {A kinetic chain growth algorithm in coarse-grained simulations},
-  author={Hong Liu; You-Liang Zhu; Zhong-Yuan Lu; Florian Müller-Plathe},
+  author={Hong Liu*; You-Liang Zhu; Zhong-Yuan Lu; Florian Müller-Plathe},
   journal = {Journal of Computational Chemistry},
   year    = 2016,
   volume  = 37,
