--- a/publication/in-depth-analysis-of-supramolecular/cite.bib
+++ b/publication/in-depth-analysis-of-supramolecular/cite.bib
@@ -1,6 +1,6 @@
 @article{
   title = {In-Depth Analysis of Supramolecular Interfacial Polymerization via a Computer Simulation Strategy},
-  author={Ji-Yuan Xing; Yao-Hong Xue; Zhong-Yuan Lu; Hong Liu*},
+  author={Ji-Yuan Xing; Yao-Hong Xue; Zhong-Yuan Lu*; Hong Liu*},
   journal = {Macromolecules},
   year    = 2019,
   volume  = 52,
